This file documents the revision history for Perl extension HTTP::Body.

{{$NEXT}}
        - Fix for the fix..... don't ask

1.21      2015-01-29 04:48:58+01:00 Europe/Berlin
	- Fix for failing test if Plack is not installed

1.20      2015-01-28 16:20:59+01:00 Europe/Berlin
        -new method 'part_data' which preserves multipart meta information just in cause
          you have a form upload with unexpected charsets, etc.

1.19
        - Release for cleanup of dzil

1.18      2013-12-06 10:05:33 America/New_York
        - Added configurable basename regexp, test added with fixed regexp for next release
          (Torsten Raudssus [GETTY])
        - Added .gitignore

1.16    Wed, 3 Oct 2012 15:18:47 CET
        - Added support for application/json (Gareth Kirwan [GBJK])

1.15    Mon, 5 Dec 2011 02:59:02 CET
        - Added missing requirement (Torsten Raudssus [GETTY])

1.14    Tue 26 Oct 2010 19:42:00 CET
        - removed benchmark test data and benchmark script for release (Torsten Raudssus [GETTY])

1.12    Sat 19 Mar 2011 19:05:17 CET
        - Fixed the t/08 test

1.11    Tue 26 Oct 2010 14:10:00 UTC
        - Added param_order capability (Torsten Raudssus [GETTY])

1.10    Fri 8 Oct 2010 15:50:55 UTC
        - Patch for test failure ( thanks KENTNL/MITHALDU! )

1.09    Thu 19 Aug 2010 19:08:55 UTC
        - remove blib for PAUSE indexing.

1.08    Thu 19 Aug 2010 18:08:42 UTC
        - Temp files now preserve the suffix of the uploaded file. This makes
          it possible to feed the file directly into a mime-type-determining
          module that may rely on this suffix as part of its heuristic. (Dave
          Rolsky)
        - Fix for RT#54443 Xforms buffering incorrectly (Simon Elliott)
        - Move to Dist::Zilla

1.07    2010-01-24 20:40:00
        - Up IO::File dependency.

1.06    2010-01-09 19:21:00
        - Added $body->cleanup(1) flag to enable auto-deletion of temporary files
          during DESTROY. (Vany Serezhkin)